created docs for user patch and blog post routes
